Second version of song folder manager

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Desenfocament gaussià
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Igualat
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosionar
 
+SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existeix la carpeta, vols crear-la?
+SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escriu aquí la ruta de la carpeta de les cançons
+
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Continuar
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informació
 MSG_QUESTION_TITLE=Qüestió
 MSG_QUIT_USWP=Realment vols sortir d'UltraStar?
 MSG_END_PARTY=Realment vols sortir del mode festa?
-MSG_END_SONGDIRS=Sortir sense guardar?
 
 ERROR_NO_SONGS=No hi ha cançons
 ERROR_NO_PLUGINS=No hi ha Plugins
@@ -687,7 +689,7 @@ C_FIXEDBY=Reparat per
 C_FOLDERS=Carpetes
 
 C_GAME=Joc
-;TODO: C_GENERAL=General
+C_GENERAL=General
 C_GRAPHICS=Gràfics
 
 C_INFORMATION=Informació
@@ -703,7 +705,7 @@ C_LYRICS=LLetres
 
 C_MEDLEY=Barreja
 C_MEDLEYC=Barreja calculada
-;TODO: C_MICROPHONE=Microphone
+C_MICROPHONE=Micròfon
 C_MICROPHONES=Micròfons
 C_MODE=Mode
 
@@ -714,7 +716,7 @@ C_NO_INTERNET_CONNECTION=No hi ha connexió a Internet
 C_OPEN_PLAYLIST=Obre la llista de reproducció
 C_OPTIONS=Opcions
 
-;TODO: C_PLAYER=Player
+C_PLAYER=Jugador
 C_PLAYERS=Jugadors
 C_PLAYLIST=Llista de reproducció
 C_PROFILES=Perfils
@@ -752,6 +754,3 @@ C_VIDEO=Vídeo
 C_WEBCAM=Càmera web
 
 C_YES=Si
-;# ---------------------------
-;#  -- COMMON TRANSLATIONS --
-;# ---------------------------
