--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Tærskel
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Vælg
 SING_LEGEND_NAVIGATE=Naviger
 SING_LEGEND_CONTINUE=Fortsæt
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Fejl
 MSG_QUESTION_TITLE=Spørgsmål
 MSG_QUIT_USWP=Vil du virkelig forlade UltraStar?
 MSG_END_PARTY=Vil du virkelig forlade fest Modus?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ingen Sange hentet
 ERROR_NO_PLUGINS=Igen Plugins hentet
