--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Hägusus
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Võrdsustatud
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Lõhenema
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Vali
 SING_LEGEND_NAVIGATE=Navigeeri
 SING_LEGEND_CONTINUE=Jätka
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informatsioon
 MSG_QUESTION_TITLE=Küsimus
 MSG_QUIT_USWP=Lõplikult väljuda UltraStarist?
 MSG_END_PARTY=Lõplikult väljuda peoversioonist?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Pole laule üles laetud
 ERROR_NO_PLUGINS=Pole pluginaid üles laetud
