--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Select
 SING_LEGEND_NAVIGATE=Navigate
 SING_LEGEND_CONTINUE=Continue
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Question
 MSG_QUIT_USWP=Really leave UltraStar?
 MSG_END_PARTY=Really leave party mode?
-MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=No songs loaded
 ERROR_NO_PLUGINS=No plugins loaded
