--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Difuminado Gaussiano
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosión
 
+SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existe la carpeta ¿deseas crearla?
+SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escribe aquí la ruta de la carpeta de las canciones
+
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Continuar
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
 MSG_QUIT_USWP=¿Seguro que quieres salir?
 MSG_END_PARTY=¿Seguro que quieres salir del modo fiesta?
-MSG_END_SONGDIRS=¿Salir sin guardar cambios?
 
 ERROR_NO_SONGS=No hay canciones
 ERROR_NO_PLUGINS=No hay plugins
