--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Umbral do micro.
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: ING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existe la carpeta ¿deseas crearla?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escribe aquí la ruta de la carpeta de las canciones
+
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Proseguir
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Información
 MSG_QUESTION_TITLE=Pregunta
 MSG_QUIT_USWP=Seguro que queres saír?
 MSG_END_PARTY=Seguro que queres saír do modo festa?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Non hai cancións
 ERROR_NO_PLUGINS=Non hai plugins
