--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Sgleò Gaussach
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Co-chothromaichte
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Bleith
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Tagh
 SING_LEGEND_NAVIGATE=Seòl
 SING_LEGEND_CONTINUE=Air adhart
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Fiosrachadh
 MSG_QUESTION_TITLE=Ceist
 MSG_QUIT_USWP=A bheil thu airson UltraStar fhàgail?
 MSG_END_PARTY=A bheil thu airson am modh cèilidh fhàgail?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Cha deach òran a luchdadh
 ERROR_NO_PLUGINS=Cha deach plugan a luchdadh
