--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Sfocatura gaussiana
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalizzato
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodere
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Seleziona
 SING_LEGEND_NAVIGATE=Naviga
 SING_LEGEND_CONTINUE=Continua
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informazione
 MSG_QUESTION_TITLE=Domanda
 MSG_QUIT_USWP=Vuoi davvero uscire da UltraStar?
 MSG_END_PARTY=Vuoi davvero terminare la Modalità Party?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nessuna Canzone caricata!
 ERROR_NO_PLUGINS=Nessun Plugin caricato!
