--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Rauschënnerdrëck.
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Auswielen
 SING_LEGEND_NAVIGATE=Navigéieren
 SING_LEGEND_CONTINUE=Weider
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informatioun
 MSG_QUESTION_TITLE=Bestätegung
 MSG_QUIT_USWP=UltraStar wierklech verloossen?
 MSG_END_PARTY=Party wierklech verloossen?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Keng Lidder fonnt
 ERROR_NO_PLUGINS=Kee Plugin fonnt
