--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gauss életlenítés
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Kiegyenlített
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodált
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Választás
 SING_LEGEND_NAVIGATE=Navigálás
 SING_LEGEND_CONTINUE=Folytatás
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Infó
 MSG_QUESTION_TITLE=Kérdés
 MSG_QUIT_USWP=Biztos elhagyod az UltraStar színpadát?
 MSG_END_PARTY=Biztos kilépsz a Buli módból?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nincs dal betöltve
 ERROR_NO_PLUGINS=Nincs plugin betöltve
