--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Rozmycie Gaussa
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Wyrównany
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erozja
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Wybierz
 SING_LEGEND_NAVIGATE=Nawiguj
 SING_LEGEND_CONTINUE=Kontynuacja
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informacja
 MSG_QUESTION_TITLE=Pytanie
 MSG_QUIT_USWP=Czy na prawdę chcesz opuścić UltraStar?
 MSG_END_PARTY=Na pewno chcesz zakończyć tryb imprezy?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Brak piosenek
 ERROR_NO_PLUGINS=Brak wtyczek
