--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian Blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosão
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Seleccionar
 SING_LEGEND_NAVIGATE=Navegar
 SING_LEGEND_CONTINUE=Continuar
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informação
 MSG_QUESTION_TITLE=Questão
 MSG_QUIT_USWP=Deseja mesmo sair do UltraStar?
 MSG_END_PARTY=Deseja mesmo terminar o Modo Festa?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nenhuma Canção lida
 ERROR_NO_PLUGINS=Nenhum Plugin lido
