--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Погрешность
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=выбрать
 SING_LEGEND_NAVIGATE=перейти
 SING_LEGEND_CONTINUE=продолжить
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Информация
 MSG_QUESTION_TITLE=Вопрос
 MSG_QUIT_USWP=Вы действительно желаете покинуть UltraStar?
 MSG_END_PARTY=Действительно покинуть режим вечеринки?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Нет загруженных песен
 ERROR_NO_PLUGINS=Нет загруженных дополнений
