--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_PREVIEW=Activați previzualizarea
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Alege
 SING_LEGEND_NAVIGATE=Navighează
 SING_LEGEND_CONTINUE=Continuă
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informaţii
 MSG_QUESTION_TITLE=Întrebare
 MSG_QUIT_USWP=Chiar ieşi?
 MSG_END_PARTY=Chiar ieşi din modul party?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nu există cântece
 ERROR_NO_PLUGINS=Nu există plugin-uri
