--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussove rozostrenie
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ekvalizovať
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodovať
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Výber
 SING_LEGEND_NAVIGATE=Navigácia
 SING_LEGEND_CONTINUE=Pokračovať
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informácia
 MSG_QUESTION_TITLE=Otázka
 MSG_QUIT_USWP=Skutočne chcete ukončiť UltraStar?
 MSG_END_PARTY=Skutočne chcete ukončiť párty mód?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Žiadna skladba
 ERROR_NO_PLUGINS=Žiaden zásuvný modul
