--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Prag
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Izberi
 SING_LEGEND_NAVIGATE=Premik
 SING_LEGEND_CONTINUE=Nadaljuj
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Napaka
 MSG_QUESTION_TITLE=Vprašanje
 MSG_QUIT_USWP=Želite zapustiti Ultrastar?
 MSG_END_PARTY=Koncam zabavo?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ni pesmi: Naloži jih v mapo Songs
 ERROR_NO_PLUGINS=Ni vkljuckov
