--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Weichzeichnen
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ausgeglichen
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodieren
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Auswählen
 SING_LEGEND_NAVIGATE=Navigieren
 SING_LEGEND_CONTINUE=Weiter
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Frage
 MSG_QUIT_USWP=UltraStar WorldParty wirklich beenden?
 MSG_END_PARTY=Party-Modus wirklich beenden?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Keine Songs vorhanden.
 ERROR_NO_PLUGINS=Keine Plugins vorhanden.
