--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Arintzea
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Hautatu
 SING_LEGEND_NAVIGATE=Nabigatu
 SING_LEGEND_CONTINUE=Jarraitu
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informazioa
 MSG_QUESTION_TITLE=Galdera
 MSG_QUIT_USWP=Ziur zaude irten nahi duzula?
 MSG_END_PARTY=Ziur zaude talde jokoa bukatu nahi duzula?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ez dago abestirik
 ERROR_NO_PLUGINS=Ez dago pluginik
