--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Flou gaussien
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Egaliser
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Couper
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Valider
 SING_LEGEND_NAVIGATE=Naviguer
 SING_LEGEND_CONTINUE=Continuer
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Information
 MSG_QUESTION_TITLE=Confirmation
 MSG_QUIT_USWP=Quitter le jeu ?
 MSG_END_PARTY=Quitter la fête ?
-MSG_END_SONGDIRS=Quitter sans sauvegarder?
 
 ERROR_NO_SONGS=Chansons introuvables
 ERROR_NO_PLUGINS=Plugins introuvables
