--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Slenkstis
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Pasirinkite
 SING_LEGEND_NAVIGATE=Naršyti
 SING_LEGEND_CONTINUE=Tęsti
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Klaida
 ;TODO: MSG_QUESTION_TITLE=Question
 ;TODO: MSG_QUIT_USWP=Really leave UltraStar?
 ;TODO: MSG_END_PARTY=Really leave party mode?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ;TODO: ERROR_NO_SONGS=No songs loaded
 ;TODO: ERROR_NO_PLUGINS=No plugins loaded
