--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Randen
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Selecteer
 SING_LEGEND_NAVIGATE=Navigeer
 SING_LEGEND_CONTINUE=Ga Verder
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Error
 MSG_QUESTION_TITLE=Vraag
 MSG_QUIT_USWP=Uit met de pret?
 MSG_END_PARTY=Stoppen met de Party?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Geen liedjes geladen
 ERROR_NO_PLUGINS=Geen plugins geladen
