--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Toleransegrense
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Velg
 SING_LEGEND_NAVIGATE=Naviger
 SING_LEGEND_CONTINUE=Fortsett
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Feil
 MSG_QUESTION_TITLE=Spørsmål
 MSG_QUIT_USWP=Vil du virkelig avslutte UltraStar?
 MSG_END_PARTY=Vil du virkelig forlate party-modusen?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ingen sanger lastet
 ERROR_NO_PLUGINS=Ingen plug-ins lastet
