--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Aloituspiste
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Valitse
 SING_LEGEND_NAVIGATE=Selaa
 SING_LEGEND_CONTINUE=Eteenpäin
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Informaatio
 MSG_QUESTION_TITLE=Kysymys
 MSG_QUIT_USWP=Tahdotko todella sulkea UltraStarin?
 MSG_END_PARTY=Tahdotko todella sulkea Tiimilaulun?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Ei kappaleita
 ERROR_NO_PLUGINS=Ei lisäkkeitä ladattu
