--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ljudtröskel
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Välj
 SING_LEGEND_NAVIGATE=Navigera
 SING_LEGEND_CONTINUE=Fortsätt
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Fel
 MSG_QUESTION_TITLE=Fråga
 MSG_QUIT_USWP=Vill du verkligen avsluta UltraStar?
 MSG_END_PARTY=Vill du verkligen avsluta partyläge?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Inga låtar laddade
 ERROR_NO_PLUGINS=Inga insticksprogram laddade
