--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Þröskuldur
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Velja
 SING_LEGEND_NAVIGATE=Stýra
 SING_LEGEND_CONTINUE=áfram
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Upplýsingar
 MSG_QUESTION_TITLE=Spurning
 MSG_QUIT_USWP=Viltu hætta í UltraStar?
 MSG_END_PARTY=Virkilega hætta í Partí?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Engum lögum hlaðið inn
 ERROR_NO_PLUGINS=Engum viðbótum hlaðið inn
