--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Práh
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Vybrat
 SING_LEGEND_NAVIGATE=Navigace
 SING_LEGEND_CONTINUE=Pokračovat
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=Info
 MSG_QUESTION_TITLE=Potvrzení
 MSG_QUIT_USWP=Opravdu ukončit UltraStar?
 MSG_END_PARTY=Opravdu ukončit párty mód?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Žádné skladby nenačteny
 ERROR_NO_PLUGINS=Žádné doplňky nenačteny
