--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Ευαισθησία μικροφώνου
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Επέλεξε
 SING_LEGEND_NAVIGATE=Εξερέυνηση
 SING_LEGEND_CONTINUE=Συνέχισε
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Σφάλμα
 MSG_QUESTION_TITLE=Ερώτηση
 MSG_QUIT_USWP=Έξοδος από το παιχνίδι?
 MSG_END_PARTY=Έξοδος απο το παιχνίδι "Πάρτυ"?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Δεν φορτώθηκαν τραγούδια
 ERROR_NO_PLUGINS=Δεν φορτώθηκαν βοηθητικές εφαρμογές
