--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Stepen Cujnosti
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=Izaberi
 SING_LEGEND_NAVIGATE=Biraj
 SING_LEGEND_CONTINUE=Nastavi
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=Greska
 MSG_QUESTION_TITLE=Pitanje
 MSG_QUIT_USWP=Stvarno napustate UltraStar?
 MSG_END_PARTY=Stvarno napustate Timski Mod?
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=Nema ucitanih pesama
 ERROR_NO_PLUGINS=Nema ucitanih plugin-ova
