--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=極限
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=選ぶ
 SING_LEGEND_NAVIGATE=ナビ
 SING_LEGEND_CONTINUE=続く
@@ -615,7 +618,6 @@ MSG_ERROR_TITLE=エラー
 MSG_QUESTION_TITLE=確認
 MSG_QUIT_USWP=本当にゲームをやめる？
 MSG_END_PARTY=本当にパーティーモードをやめる？
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=曲はロードしてない
 ERROR_NO_PLUGINS=プラグインはロードしてない
