--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -314,6 +314,9 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=阈值
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
+;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+
 SING_LEGEND_SELECT=选择
 SING_LEGEND_NAVIGATE=导航
 SING_LEGEND_CONTINUE=继续
@@ -615,7 +618,6 @@ MSG_INFO_TITLE=信息
 MSG_QUESTION_TITLE=确认
 MSG_QUIT_USWP=确定离开UltraStar？
 MSG_END_PARTY=确定离开派对模式？
-;TODO: MSG_END_SONGDIRS=Exit without saving?
 
 ERROR_NO_SONGS=未载入歌曲
 ERROR_NO_PLUGINS=未载入插件
