--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Desenfocament gaussià
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Igualat
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosionar
 
+;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
 SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existeix la carpeta, vols crear-la?
 SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escriu aquí la ruta de la carpeta de les cançons
 
