--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Difuminado Gaussiano
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equilibrada
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erosión
 
+SING_OPTIONS_SONGDIRS_DESC=Añade rutas alternativas para cargar tus canciones
 SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existe la carpeta ¿deseas crearla?
 SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escribe aquí la ruta de la carpeta de las canciones
 
