--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_THRESHOLD=Umbral do micro.
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
 ;TODO: ING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=No existe la carpeta ¿deseas crearla?
 ;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Escribe aquí la ruta de la carpeta de las canciones
 
