--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Gaussian blur
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
+SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
 SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
 SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
 
