--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Flou gaussien
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Egaliser
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Couper
 
+;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
 ;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
 ;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
 
