--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -314,6 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Rozmycie Gaussa
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Wyrównany
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erozja
 
+;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
 ;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
 ;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
 
