--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -314,7 +314,7 @@ SING_OPTIONS_WEBCAM_EFFECT_EDGES=Randen
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Equalized
 ;TODO: SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erode
 
-;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative routes to load your songs
+;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative paths to load your songs
 ;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
 ;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
 
