redesign party player screen

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Desafiament
 PARTY_MODE_TOURNAMENT=Torneig
 PARTY_MODE_JUKEBOX=Reproductor de música
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Inseriu el número i el nom dels jugadors
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Número de jugadors
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Número de rondes
