--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Wettkampf
 PARTY_MODE_TOURNAMENT=Turnier
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Spieleranzahl und Spieler angeben
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Anzahl der Spieler
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Anzahl der Runden
