--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Väljakutse
 PARTY_MODE_TOURNAMENT=Turniir
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Sisesta number ja mängijate nimed
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Mängijate arv
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Ringide arv
