--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Desafío
 PARTY_MODE_TOURNAMENT=Torneo
 PARTY_MODE_JUKEBOX=Jukebox
 
+PARTY_MODE_DESC=Escribe el nombre de tu equipo y jugadores
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Inserta el nº y los nombres de los jugadores
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Nº de jugadores
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Escoge el número de rondas para cada fase
