--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Desafío
 PARTY_MODE_TOURNAMENT=Torneo
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Engade o nº e os nomes dos xogadores
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Nº de xogadores
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Escolle o número de roldas para cada fase
