--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Dùbhlan
 PARTY_MODE_TOURNAMENT=Co-fharpais
 PARTY_MODE_JUKEBOX=Inneal-chlàr
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Cuir a-steach àireamh is ainm a’ chluicheadair
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Co mheud cluicheadair
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Co mheud cuairt
