--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Sfida
 PARTY_MODE_TOURNAMENT=Torneo
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Scegli il numero e i nomi dei giocatori
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Numero di giocatori
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Numero di sfide
