--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Kihívás
 PARTY_MODE_TOURNAMENT=Versenysorozat
 PARTY_MODE_JUKEBOX=Zenedoboz
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Játékosok száma és neve
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Játékosok száma
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Körök száma
