--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Výzva
 PARTY_MODE_TOURNAMENT=Turnaj
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Zadajte počet a mená hráčov
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Počet hráčov
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Počet kôl
