--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CLASSIC=Classic
 PARTY_MODE_TOURNAMENT=Tournament
 PARTY_MODE_JUKEBOX=Jukebox
 
+PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number of players and their names
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Number of rounds
