--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Challenge
 PARTY_MODE_TOURNAMENT=Tournoi
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insérer le nombre et le nom des joueurs
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Nombre de joueurs
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Nombre des manches
