--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Wyzwanie
 PARTY_MODE_TOURNAMENT=Turniej
 PARTY_MODE_JUKEBOX=Szafa grająca
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Wprowadź liczbę graczy i nazwy
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Liczba graczy
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Liczba rund
