--- a/game/languages/Português.ini
+++ b/game/languages/Português.ini
@@ -569,6 +569,8 @@ PARTY_MODE_CHALLENGE=Desafio
 PARTY_MODE_TOURNAMENT=Torneio
 PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insira o número e os nomes dos jogadores
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Nº de Jogadores
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=Escolha o numero de rondas para cada fase
