--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -569,6 +569,8 @@ STAT_FORMAT_BANDS=%0:s \n\n %1:dx 唱过
 ;TODO: PARTY_MODE_TOURNAMENT=Tournament
 ;TODO: PARTY_MODE_JUKEBOX=Jukebox
 
+;TODO: PARTY_MODE_DESC=Write the name of your team and players
+
 ;TODO: PARTY_MODE_TOURNAMENT_PLAYER_DESC=Insert number of players and their names
 ;TODO: PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Number of players
 PARTY_MODE_TOURNAMENT_OPTIONS_DESC=回合数量
