add sort songs by recents

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Künstler
 OPTION_VALUE_ARTIST2=Künstler2
 OPTION_VALUE_YEAR=Jahr
 OPTION_VALUE_DECADE=Jahrzehnt
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Wenn vorhanden
