--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Año
 OPTION_VALUE_DECADE=Década
+OPTION_VALUE_RECENTS=Recientes
 OPTION_VALUE_PLAYLIST=Lista
 
 OPTION_VALUE_WHEN_EXISTS=Cuando exista
