--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Neach-ciùil
 OPTION_VALUE_ARTIST2=Neach-ciùil 2
 OPTION_VALUE_YEAR=Bliadhna
 OPTION_VALUE_DECADE=Deichead
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Liosta-chluich
 
 OPTION_VALUE_WHEN_EXISTS=Nuair a bhios gin ann
