--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Izvođač
 OPTION_VALUE_ARTIST2=Izvođač2
 OPTION_VALUE_YEAR=Godina
 OPTION_VALUE_DECADE=Desetljeće
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playliste
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
