--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Előadó
 OPTION_VALUE_ARTIST2=Előadó2
 OPTION_VALUE_YEAR=Év
 OPTION_VALUE_DECADE=Évtized
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Számlista
 
 OPTION_VALUE_WHEN_EXISTS=Ha létezik
