--- a/game/languages/Nederlands.ini
+++ b/game/languages/Nederlands.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artiest
 OPTION_VALUE_ARTIST2=Artiest2
 OPTION_VALUE_YEAR=Jaar
 OPTION_VALUE_DECADE=Decennium
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Afspeellijst
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
