--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artysta
 OPTION_VALUE_ARTIST2=Artysta2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Dekada
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlista
 
 OPTION_VALUE_WHEN_EXISTS=Jeśli istnieje
