--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Исполнитель
 OPTION_VALUE_ARTIST2=Исполнитель 2
 OPTION_VALUE_YEAR=Год
 OPTION_VALUE_DECADE=десятилетие
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=плэйлист
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
