--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Avtor
 OPTION_VALUE_ARTIST2=Avtor2
 OPTION_VALUE_YEAR=Leto
 OPTION_VALUE_DECADE=Desetletje
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Seznam
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
