--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artisti
 OPTION_VALUE_ARTIST2=Artisti2
 OPTION_VALUE_YEAR=Vuosi
 OPTION_VALUE_DECADE=Vuosikymmen
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Kappalelista
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
