--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Interpret
 OPTION_VALUE_ARTIST2=Interpret 2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Desetiletí
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Seznam stop
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
