--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Curs
 OPTION_VALUE_DECADE=Dècada
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Llista
 
 OPTION_VALUE_WHEN_EXISTS=Quan existeixi
