--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Kunstner
 ;TODO: OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=År
 OPTION_VALUE_DECADE=Årti
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Afspilningsliste
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
