--- a/game/languages/Eesti keel.ini
+++ b/game/languages/Eesti keel.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artist
 OPTION_VALUE_ARTIST2=Artist 2
 OPTION_VALUE_YEAR=Aasta
 OPTION_VALUE_DECADE=Aastakümmend
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Esitusloend
 
 OPTION_VALUE_WHEN_EXISTS=Kui olemas
