--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_ARTIST2=2.artista
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Zerrenda
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
