--- a/game/languages/Galego.ini
+++ b/game/languages/Galego.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Ano
 OPTION_VALUE_DECADE=Década
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Listaxe
 
 OPTION_VALUE_WHEN_EXISTS=Cando exista
