--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artista
 OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Anno
 OPTION_VALUE_DECADE=Decennio
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Quando già esistente
