--- a/game/languages/Lietuvių.ini
+++ b/game/languages/Lietuvių.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Menininkas
 OPTION_VALUE_ARTIST2=Menininkas2
 OPTION_VALUE_YEAR=Metai
 OPTION_VALUE_DECADE=Dešimtmetis
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Grojaraštis
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
