--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Kënschtler
 OPTION_VALUE_ARTIST2=Kënschtler2
 OPTION_VALUE_YEAR=Joer
 OPTION_VALUE_DECADE=Joerzéngt
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
