--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artist
 OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=An
 OPTION_VALUE_DECADE=Deceniu
+;TODO: OPTION_VALUE_RECENTS=Recents
 ;TODO: OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
