--- a/game/languages/Slovenský.ini
+++ b/game/languages/Slovenský.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Meno autora
 OPTION_VALUE_ARTIST2=Meno autora2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Desaťročia
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Ak existuje
