--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Artist
 OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=År
 OPTION_VALUE_DECADE=Årtionde
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Spellista
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
