--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Flytjandi
 OPTION_VALUE_ARTIST2=Flytjandi2
 OPTION_VALUE_YEAR=Ár
 OPTION_VALUE_DECADE=Áratugur
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Lagalisti
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
