--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=Izvodjac
 OPTION_VALUE_ARTIST2=Izvodjac2
 OPTION_VALUE_YEAR=Година
 OPTION_VALUE_DECADE=Декада
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Lista pesama
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
