--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=歌手
 ;TODO: OPTION_VALUE_ARTIST2=Artist2
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=曲順
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
