--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -78,6 +78,7 @@ OPTION_VALUE_ARTIST=艺术家
 OPTION_VALUE_ARTIST2=艺术家2
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
+;TODO: OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=播放列表
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
