--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -78,7 +78,7 @@ OPTION_VALUE_ARTIST=Künstler
 OPTION_VALUE_ARTIST2=Künstler2
 OPTION_VALUE_YEAR=Jahr
 OPTION_VALUE_DECADE=Jahrzehnt
-;TODO: OPTION_VALUE_RECENTS=Recents
+OPTION_VALUE_RECENTS=Vor kurzem
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Wenn vorhanden
@@ -315,9 +315,9 @@ SING_OPTIONS_WEBCAM_EFFECT_GAUSSIAN_BLUR=Weichzeichnen
 SING_OPTIONS_WEBCAM_EFFECT_EQUALIZED=Ausgeglichen
 SING_OPTIONS_WEBCAM_EFFECT_ERODE=Erodieren
 
-;TODO: SING_OPTIONS_SONGDIRS_DESC=Add alternative paths to load your songs
-;TODO: SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=The folder does not exist, do you want to create it?
-;TODO: SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Write here the path of the songs folder
+SING_OPTIONS_SONGDIRS_DESC=Alternative Verzeichnisse zum Laden von Songs angeben
+SING_OPTIONS_SONGDIRS_NOTEXIST_FOLDER=Der Ordner existiert nicht, soll er erstellt werden?
+SING_OPTIONS_SONGDIRS_ENTER_FOLDER_NAME=Hier das Verzeichnis des Songs-Ordners eingeben
 
 SING_LEGEND_SELECT=Auswählen
 SING_LEGEND_NAVIGATE=Navigieren
@@ -570,7 +570,7 @@ PARTY_MODE_CHALLENGE=Wettkampf
 PARTY_MODE_TOURNAMENT=Turnier
 PARTY_MODE_JUKEBOX=Jukebox
 
-;TODO: PARTY_MODE_DESC=Write the name of your team and players
+PARTY_MODE_DESC=Gib den Namen deines Teams und der Spieler ein
 
 PARTY_MODE_TOURNAMENT_PLAYER_DESC=Spieleranzahl und Spieler angeben
 PARTY_MODE_TOURNAMENT_NUMBER_PLAYERS=Anzahl der Spieler
@@ -739,7 +739,7 @@ C_SEND=Senden
 C_SING=Singen
 C_SING_MEDLEY=Medley singen
 C_SONG=Lied
-;TODO: C_SONGDIRS=Folders
+C_SONGDIRS=Ordner
 C_SONGS=Lieder
 C_SORT=Sortieren
 C_SORT_SONGS=Lieder sortieren
