--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -77,7 +77,7 @@ OPTION_VALUE_TITLE=Title
 OPTION_VALUE_ARTIST=Artist
 OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=Year
-DECADE=Decade
+OPTION_VALUE_DECADE=Decade
 OPTION_VALUE_RECENTS=Recents
 OPTION_VALUE_PLAYLIST=Playlist
 
