Fix missing translations

--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -499,7 +499,7 @@ MODE_5000POINTSBLIND_DESC=Alcanza los 5000 puntos sin ver las notas
 MODE_2000POINTS_NAME=Hasta 2000
 MODE_2000POINTS_DESC=Alcanza los 2000 puntos
 
-MODE_2000POINTSBLIND_NAME=Blind 2000
+MODE_2000POINTSBLIND_NAME=A ciegas 2000
 MODE_2000POINTSBLIND_DESC=Alcanza los 2000 puntos sin ver las notas
 
 MODE_DUEL_NAME=Duelo
@@ -747,6 +747,7 @@ C_SOUND=Sonido
 C_STATISTICS=Estadísticas
 C_STATS=Estadísticas
 
+C_TEAM=Equipo
 C_THEME=Tema
 C_THEMES=Apariencia
 C_TOP=Superior
