--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -747,6 +747,7 @@ C_SOUND=Audio
 C_STATISTICS=Statistiques
 C_STATS=Statistiques
 
+;TODO: C_TEAM=Team
 C_THEME=Thème
 C_THEMES=Thèmes
 C_TOP=Supérieurer
