--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -747,6 +747,7 @@ C_SOUND=Toun
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Design
 ;TODO: C_TOP=Top
