--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -747,6 +747,7 @@ C_SOUND=Ljud
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Teman
 ;TODO: C_TOP=Top
