--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -747,6 +747,7 @@ C_SOUND=声音
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=主题
 ;TODO: C_TOP=Top
