--- a/game/languages/Magyar.ini
+++ b/game/languages/Magyar.ini
@@ -747,6 +747,7 @@ C_SOUND=Hang
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Témák
 ;TODO: C_TOP=Top
