--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -747,6 +747,7 @@ C_SOUND=Lyd
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Utseende
 ;TODO: C_TOP=Top
