--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -747,6 +747,7 @@ C_SOUND=звук
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=темы
 ;TODO: C_TOP=Top
