--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -747,6 +747,7 @@ C_SOUND=Sunet
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Aspect
 ;TODO: C_TOP=Top
