--- a/game/languages/Slovenščina.ini
+++ b/game/languages/Slovenščina.ini
@@ -747,6 +747,7 @@ C_SOUND=Zvok
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Tema
 ;TODO: C_TOP=Top
