--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -747,6 +747,7 @@ C_SOUND=Äänet
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Teemat
 ;TODO: C_TOP=Top
