--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -747,6 +747,7 @@ C_SOUND=Hljóð
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=Snið
 ;TODO: C_TOP=Top
