--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -747,6 +747,7 @@ C_SOUND=音
 ;TODO: C_STATISTICS=Statistics
 ;TODO: C_STATS=Stats
 
+;TODO: C_TEAM=Team
 ;TODO: C_THEME=Theme
 C_THEMES=テーマ
 ;TODO: C_TOP=Top
