Update German translation

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -747,7 +747,7 @@ C_SOUND=Sound
 C_STATISTICS=Statistiken
 C_STATS=Stat.
 
-;TODO: C_TEAM=Team
+C_TEAM=Team
 C_THEME=Theme
 C_THEMES=Design
 C_TOP=Oben
