Added song time to the advanced option menu

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -192,6 +192,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Nach Songauswahl
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Schließen bestätigen
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Party-Assistent
 SING_OPTIONS_ADVANCED_TOPSCORES=Höchstpunktzahlen
+;TODO: SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE=Song time
 
 SING_OPTIONS_ADVANCED_DEBUG_DESC=FPS anzeigen
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Stellt das Mikrofonsignal beim Singen visuell dar
@@ -199,9 +200,13 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Bestimme, was nach der Songauswahl gesche
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Das Schließen des Spiels muss noch einmal bestätigt werden
 SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Zeigt ein Menü bei der Songauswahl im Partymodus
 SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Zeigt die fünf höchsten Punktzahlen eines Spielers
+;TODO: SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE_DESC=Choose the time to show in the bottom bar when singing a songl
 
 OPTION_VALUE_ALL=Alle
 OPTION_VALUE_PLAYER=Spieler
+;TODO: OPTION_VALUE_CURRENT=Actual
+;TODO: OPTION_VALUE_REMAINING=Restante
+;TODO: OPTION_VALUE_TOTAL=Total
 
 SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronisiere den Web-Account mit dem Spiel, um deine Punktzahlen zu übermitteln
 SING_OPTIONS_NETWORK_WEBSITE=Webseite
