--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -192,6 +192,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=After song select
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Safety questions
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE=Song time
 
 SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
@@ -199,9 +200,13 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Choose what to do after song selection
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
 SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
 SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
+SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE_DESC=Choose the time to show in the bottom bar when singing a song
 
 OPTION_VALUE_ALL=All
 OPTION_VALUE_PLAYER=Player
+OPTION_VALUE_CURRENT=Current
+OPTION_VALUE_REMAINING=Remaining
+OPTION_VALUE_TOTAL=Total
 
 SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Website
