--- a/game/languages/Español.ini
+++ b/game/languages/Español.ini
@@ -192,6 +192,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=Al seleccionar canción
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Confirmar al salir
 SING_OPTIONS_ADVANCED_PARTYPOPUP=Asistente de fiesta
 SING_OPTIONS_ADVANCED_TOPSCORES=Mostrar calificaciones
+SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE=Tiempo canción
 
 SING_OPTIONS_ADVANCED_DEBUG_DESC=Mostrar los fotogramas por segundos del juego
 SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Mostrar señal de voz en la pantalla canta
@@ -199,9 +200,13 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK_DESC=Elegir que hacer al seleccionar canción
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirmar al salir del juego
 SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Mostrar menú al seleccionar una canción en modo fiesta
 SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Mostrar las 5 mejores puntuaciones de un jugador
+SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE_DESC=Elegir el tiempo a mostrar en la barra inferior al cantar una canción
 
 OPTION_VALUE_ALL=Todos los jugadores
 OPTION_VALUE_PLAYER=Jugador actual
+OPTION_VALUE_CURRENT=Actual
+OPTION_VALUE_REMAINING=Restante
+OPTION_VALUE_TOTAL=Total
 
 SING_OPTIONS_NETWORK_INSERT_USER_INFO=Sincroniza la cuenta de la web con el juego para enviar tus puntuaciones
 SING_OPTIONS_NETWORK_WEBSITE=Página web
