--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -192,6 +192,7 @@ SING_OPTIONS_ADVANCED_ONSONGCLICK=După alegere cântec..
 SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Confirmă ştergere
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP=Party assistant
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES=Top Scores
+;TODO: SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE=Song time
 
 ;TODO: SING_OPTIONS_ADVANCED_DEBUG_DESC=Displays the frames per second of the game
 ;TODO: SING_OPTIONS_ADVANCED_OSCILLOSCOPE_DESC=Displays a voice signal in sing screen
@@ -199,9 +200,13 @@ SING_OPTIONS_ADVANCED_ASKBEFOREEXIT=Confirmă ştergere
 ;TODO: SING_OPTIONS_ADVANCED_ASKBEFOREEXIT_DESC=Confirm when exiting the game
 ;TODO: SING_OPTIONS_ADVANCED_PARTYPOPUP_DESC=Show menu when selecting a song in party mode
 ;TODO: SING_OPTIONS_ADVANCED_TOPSCORES_DESC=Displays a player's top 5 scores
+;TODO: SING_OPTIONS_ADVANCED_SING_TIMEBAR_MODE_DESC=Choose the time to show in the bottom bar when singing a songl
 
 OPTION_VALUE_ALL=Toate
 OPTION_VALUE_PLAYER=Jucător
+;TODO: OPTION_VALUE_CURRENT=Actual
+;TODO: OPTION_VALUE_REMAINING=Restante
+;TODO: OPTION_VALUE_TOTAL=Total
 
 ;TODO: SING_OPTIONS_NETWORK_INSERT_USER_INFO=Synchronize the web account with the game to submit your scores
 SING_OPTIONS_NETWORK_WEBSITE=Website
