[Jukebox] add sort songs by download date

--- a/game/languages/Català.ini
+++ b/game/languages/Català.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Curs
 OPTION_VALUE_DECADE=Dècada
 ;TODO: OPTION_VALUE_RECENTS=Recents
+OPTION_VALUE_DATE=Data descàrrega
 OPTION_VALUE_PLAYLIST=Llista
 
 OPTION_VALUE_WHEN_EXISTS=Quan existeixi
