--- a/game/languages/English.ini
+++ b/game/languages/English.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=Year
 OPTION_VALUE_DECADE=Decade
 OPTION_VALUE_RECENTS=Recents
+OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=When exists
