--- a/game/languages/Français.ini
+++ b/game/languages/Français.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artiste2
 OPTION_VALUE_YEAR=Année
 OPTION_VALUE_DECADE=Décennie
 ;TODO: OPTION_VALUE_RECENTS=Recents
+OPTION_VALUE_DATE=Date téléchargement
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=S'ils existent
