--- a/game/languages/Svenska.ini
+++ b/game/languages/Svenska.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=År
 OPTION_VALUE_DECADE=Årtionde
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Spellista
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
