--- a/game/languages/Íslenska.ini
+++ b/game/languages/Íslenska.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Flytjandi2
 OPTION_VALUE_YEAR=Ár
 OPTION_VALUE_DECADE=Áratugur
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Lagalisti
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
