--- a/game/languages/Ελληνικά.ini
+++ b/game/languages/Ελληνικά.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Καλλιτέχνης2
 OPTION_VALUE_YEAR=Ετος
 OPTION_VALUE_DECADE=Δεκαετία
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Λίστα
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
