--- a/game/languages/Српски.ini
+++ b/game/languages/Српски.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Izvodjac2
 OPTION_VALUE_YEAR=Година
 OPTION_VALUE_DECADE=Декада
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Lista pesama
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
