--- a/game/languages/Dansk.ini
+++ b/game/languages/Dansk.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST=Kunstner
 OPTION_VALUE_YEAR=År
 OPTION_VALUE_DECADE=Årti
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Afspilningsliste
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
