--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Künstler2
 OPTION_VALUE_YEAR=Jahr
 OPTION_VALUE_DECADE=Jahrzehnt
 OPTION_VALUE_RECENTS=Vor kurzem
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Wenn vorhanden
