--- a/game/languages/Gàidhlig.ini
+++ b/game/languages/Gàidhlig.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Neach-ciùil 2
 OPTION_VALUE_YEAR=Bliadhna
 OPTION_VALUE_DECADE=Deichead
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Liosta-chluich
 
 OPTION_VALUE_WHEN_EXISTS=Nuair a bhios gin ann
