--- a/game/languages/Hrvatski.ini
+++ b/game/languages/Hrvatski.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Izvođač2
 OPTION_VALUE_YEAR=Godina
 OPTION_VALUE_DECADE=Desetljeće
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Playliste
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
