--- a/game/languages/Lëtzebuergesch.ini
+++ b/game/languages/Lëtzebuergesch.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Kënschtler2
 OPTION_VALUE_YEAR=Joer
 OPTION_VALUE_DECADE=Joerzéngt
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
