--- a/game/languages/Norsk.ini
+++ b/game/languages/Norsk.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=År
 OPTION_VALUE_DECADE=Tiår
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Spillelist
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
