--- a/game/languages/Polski.ini
+++ b/game/languages/Polski.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artysta2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Dekada
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Playlista
 
 OPTION_VALUE_WHEN_EXISTS=Jeśli istnieje
