--- a/game/languages/Suomi.ini
+++ b/game/languages/Suomi.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Artisti2
 OPTION_VALUE_YEAR=Vuosi
 OPTION_VALUE_DECADE=Vuosikymmen
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Kappalelista
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
