--- a/game/languages/Čeština.ini
+++ b/game/languages/Čeština.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST2=Interpret 2
 OPTION_VALUE_YEAR=Rok
 OPTION_VALUE_DECADE=Desetiletí
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=Seznam stop
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
