--- a/game/languages/日本語.ini
+++ b/game/languages/日本語.ini
@@ -79,6 +79,7 @@ OPTION_VALUE_ARTIST=歌手
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
 ;TODO: OPTION_VALUE_RECENTS=Recents
+;TODO: OPTION_VALUE_DATE=Download date
 OPTION_VALUE_PLAYLIST=曲順
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
