--- a/game/languages/Italiano.ini
+++ b/game/languages/Italiano.ini
@@ -79,7 +79,7 @@ OPTION_VALUE_ARTIST2=Artista2
 OPTION_VALUE_YEAR=Anno
 OPTION_VALUE_DECADE=Decennio
 ;TODO: OPTION_VALUE_RECENTS=Recents
-OPTION_VALUE_DATE=Data download
+OPTION_VALUE_LASTADDED=Ultimi aggiunti
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Quando già esistente
