--- a/game/languages/普通话.ini
+++ b/game/languages/普通话.ini
@@ -79,7 +79,7 @@ OPTION_VALUE_ARTIST2=艺术家2
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
 ;TODO: OPTION_VALUE_RECENTS=Recents
-;TODO: OPTION_VALUE_DATE=Download date
+;TODO: OPTION_VALUE_LASTADDED=Last added
 OPTION_VALUE_PLAYLIST=播放列表
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
