--- a/game/languages/Euskara.ini
+++ b/game/languages/Euskara.ini
@@ -79,7 +79,7 @@ OPTION_VALUE_ARTIST2=2.artista
 ;TODO: OPTION_VALUE_YEAR=Year
 ;TODO: OPTION_VALUE_DECADE=Decade
 ;TODO: OPTION_VALUE_RECENTS=Recents
-;TODO: OPTION_VALUE_DATE=Download date
+;TODO: OPTION_VALUE_LASTADDED=Last added
 OPTION_VALUE_PLAYLIST=Zerrenda
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
