--- a/game/languages/Pу́сский.ini
+++ b/game/languages/Pу́сский.ini
@@ -79,7 +79,7 @@ OPTION_VALUE_ARTIST2=Исполнитель 2
 OPTION_VALUE_YEAR=Год
 OPTION_VALUE_DECADE=десятилетие
 ;TODO: OPTION_VALUE_RECENTS=Recents
-;TODO: OPTION_VALUE_DATE=Download date
+;TODO: OPTION_VALUE_LASTADDED=Last added
 OPTION_VALUE_PLAYLIST=плэйлист
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
