--- a/game/languages/Română.ini
+++ b/game/languages/Română.ini
@@ -79,7 +79,7 @@ OPTION_VALUE_ARTIST2=Artist2
 OPTION_VALUE_YEAR=An
 OPTION_VALUE_DECADE=Deceniu
 ;TODO: OPTION_VALUE_RECENTS=Recents
-;TODO: OPTION_VALUE_DATE=Download date
+;TODO: OPTION_VALUE_LASTADDED=Last added
 ;TODO: OPTION_VALUE_PLAYLIST=Playlist
 
 ;TODO: OPTION_VALUE_WHEN_EXISTS=When exists
