Update German translation
Adds missing translations of strings

--- a/game/languages/Deutsch.ini
+++ b/game/languages/Deutsch.ini
@@ -78,8 +78,8 @@ OPTION_VALUE_ARTIST=Künstler
 OPTION_VALUE_ARTIST2=Künstler2
 OPTION_VALUE_YEAR=Jahr
 OPTION_VALUE_DECADE=Jahrzehnt
-OPTION_VALUE_RECENTS=Vor kurzem
-;TODO: OPTION_VALUE_LASTADDED=Last added
+OPTION_VALUE_RECENTS=Vor kurzem gesungen
+OPTION_VALUE_LASTADDED=Zuletzt hinzugefügt
 OPTION_VALUE_PLAYLIST=Playlist
 
 OPTION_VALUE_WHEN_EXISTS=Wenn vorhanden
